# Reception

./: .env.example  .gitignore  CLAUDE.md  Cahier des charges reception.md  README.md  backup-bdd.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  ftp_codebarre.sh  ftp_reception.sh
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_reception_par_fichier.py  0003_magasin_mail_text.py  0004_statut_ancien.py
backend/app/: main.py
backend/app/api/: articles.py  auth.py  deps.py  media.py  receptions.py  sync.py
backend/app/api/admin/: imports.py  magasins.py  parametres.py  societes.py  utilisateurs.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  article.py  auth.py  code_barre.py  import_log.py  magasin.py  parametre.py  reception.py  societe.py  sync.py  utilisateur.py
backend/app/services/: import_ftp.py  mailer.py  pdf_generator.py
backend/app/tasks/: post_validation.py  scheduler.py
backend/app/templates/: rapport_ecart.html
backend/templates/: rapport_ecart.html
backend/tests/: conftest.py  test_auth.py  test_import.py  test_multitenant.py  test_receptions.py  test_security.py
docker/: Caddyfile
docs/: criteres-acceptation-mvp.md  guide-admin.md  guide-utilisateur.md
e2e/: package.json  playwright.config.ts
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+29 files in other folders)
