[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reception-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",

    # Base de données
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",

    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "slowapi>=0.1.9",

    # Scheduler
    "apscheduler>=3.10",

    # FTP/SFTP
    "paramiko>=3.5",

    # Excel
    "openpyxl>=3.1",

    # PDF
    "weasyprint>=62",
    "jinja2>=3.1",

    # Mail
    # smtplib est dans la stdlib Python

    # Utilitaires
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "aiofiles>=24.1",
    "Pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "faker>=33.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
